Cleared redundant default css, browser compatibility fixes.

--- a/webmocks/alt_design2/splash.html
+++ b/webmocks/alt_design2/splash.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="content-type" content="application/xhtml+xml;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style-xiella.css" />
-    <title>Mock design 1 - Front page</title>
+    <title>Alt design 2 - Front page</title>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
                 <p><a href="#">Sign up now!</a></p>
             </div>
             <div class="text_content_wrapper">
-                <div class="text_content">
+                <div class="text_content" id="top_post">
                     <h2>
                         News item or welcome note
                     </h2>
