Solving nav extra space with tab design.

--- a/webmocks/alt_design2/splash.html
+++ b/webmocks/alt_design2/splash.html
@@ -16,7 +16,7 @@
                     Navigation
                 </h1>
                 <ul>
-                    <li>
+                    <li class="current_nav_page">
                         <a href="#">Home</a>
                     </li>
                     <li>
