Updated splash to reflect the new footer.

--- a/webmocks/alt_design2/splash.html
+++ b/webmocks/alt_design2/splash.html
@@ -72,7 +72,9 @@
 
         <div id="footer">
             <footer>
-                Copyright and other info goes here
+                <a href='about'>About this Site</a> 
+                (c) 2011
+                <a href='authors'>junethack developers</a> 
             </footer>
         </div>
 
