--- a/webmocks/alt_design2/login.html
+++ b/webmocks/alt_design2/login.html
@@ -15,10 +15,10 @@
             Navigation
           </h1> 
           <ul> 
-            <li class='current_nav_page'> 
+            <li> 
               <a href='#'>Home</a> 
             </li> 
-            <li> 
+            <li class='current_nav_page'> 
               <a href='#'>Login</a> 
             </li> 
             <li> 
@@ -37,35 +37,11 @@
         </p> 
       </div> 
       <div class='content_bulk'> 
-        <div class='signup_text'> 
-          <p> 
-            <a href='register'>Sign up now!</a> 
-          </p> 
-        </div> 
         <div class='text_content_wrapper'> 
-          <div class='text_content' id='top_post'> 
-            <h2> 
-              News item or welcome note
-            </h2> 
-            <p> 
-              Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim.
-            </p> 
-            <p> 
-              This is what
-              <a href='#'>a normal link</a> 
-              looks like.
-            </p> 
-            <p> 
-              Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim.
-            </p> 
-          </div> 
           <div class='text_content'> 
-            <h2> 
-              Optional news item 2, demonstrates divider image
-            </h2> 
-            <p> 
-              Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim.
-            </p> 
+            <p>
+              Login form goes here.
+            </p>
           </div> 
           <span class='clear' id='end_of_content_spacer'></span> 
         </div> 
