--- a/webmocks/alt_design2/splash.html
+++ b/webmocks/alt_design2/splash.html
@@ -1,83 +1,82 @@
-<!doctype html>
-<html>
-
-<head>
-    <meta http-equiv="content-type" content="application/xhtml+xml;charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="style-xiella.css" />
-    <title>Alt design 2 - Front page</title>
-</head>
-
-<body>
-    <div id="container">
-        <div class="navigation" id="topnav">
-            <nav>
-            <!-- use of the nav element: http://www.webteacher.ws/2009/07/09/html5-the-nav-element -->
-                <h1>
-                    Navigation
-                </h1>
-                <ul>
-                    <li class="current_nav_page">
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">Login</a>
-                    </li>
-                    <li>
-                        <a href="#">Scoreboard</a>
-                    </li>
-                    <li>
-                        <a href="#">Help</a>
-                    </li>
-                </ul>
-                <span class="clear"> </span>
-            </nav>
-        </div>
-
-        <div class="hcenter">
-            <p>
-                <img src="banner_at2.png" alt="Logo" />
-            </p>
-        </div>
-
-        <div class="content_bulk">
-            <div class="signup_text">
-                <p><a href="#">Sign up now!</a></p>
-            </div>
-            <div class="text_content_wrapper">
-                <div class="text_content" id="top_post">
-                    <h2>
-                        News item or welcome note
-                    </h2>
-                    <p>
-                        Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim. 
-                    </p>
-                    <p>
-                        This is what <a href="#">a normal link</a> looks like.
-                    </p>
-                    <p>
-                        Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim. 
-                    </p>
-                </div>
-                <div class="text_content">
-                    <h2>
-                        Optional news item 2, demonstrates divider image
-                    </h2>
-                    <p>
-                        Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim. 
-                    </p>
-                </div>
-                <span id="end_of_content_spacer" class="clear"></span>
-            </div>
-        </div>
-
-        <div id="footer">
-            <footer>
-                <a href='about'>About this Site</a> 
-                (c) 2011
-                <a href='authors'>junethack developers</a> 
-            </footer>
-        </div>
-
-    </div> <!-- end of container -->
-</body>
-</html>
+<!doctype html> 
+<html> 
+  <head> 
+    <meta content='application/xhtml+xml;charset=utf-8' http-equiv='content-type' /> 
+    <link href='style-xiella.css' rel='stylesheet' type='text/css' /> 
+    <title>Junethack</title> 
+  </head> 
+  <body> 
+    <div id='container'> 
+      <div class='navigation' id='topnav'> 
+        <nav> 
+          <!-- use of the nav element: http://www.webteacher.ws/2009/07/09/html5-the-nav-element --> 
+          <h1> 
+            Navigation
+          </h1> 
+          <ul> 
+            <li class='current_nav_page'> 
+              <a href='#'>Home</a> 
+            </li> 
+            <li> 
+              <a href='#'>Login</a> 
+            </li> 
+            <li> 
+              <a href='#'>Scoreboard</a> 
+            </li> 
+            <li> 
+              <a href='#'>Help</a> 
+            </li> 
+          </ul> 
+          <span class='clear'></span> 
+        </nav> 
+      </div> 
+      <div class='hcenter'> 
+        <p> 
+          <img alt='Logo' src='banner_at2.png' /> 
+        </p> 
+      </div> 
+      <div class='content_bulk'> 
+        <div class='signup_text'> 
+          <p> 
+            <a href='register'>Sign up now!</a> 
+          </p> 
+        </div> 
+        <div class='text_content_wrapper'> 
+          <div class='text_content' id='top_post'> 
+            <h2> 
+              News item or welcome note
+            </h2> 
+            <p> 
+              Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim.
+            </p> 
+            <p> 
+              This is what
+              <a href='#'>a normal link</a> 
+              looks like.
+            </p> 
+            <p> 
+              Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim.
+            </p> 
+          </div> 
+          <div class='text_content'> 
+            <h2> 
+              Optional news item 2, demonstrates divider image
+            </h2> 
+            <p> 
+              Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim.
+            </p> 
+          </div> 
+          <span class='clear' id='end_of_content_spacer'></span> 
+        </div> 
+      </div> 
+      <div id='footer'> 
+        <footer> 
+          <a href='about'>About this Site</a> 
+          (c) 2011
+          <a href='authors'>junethack developers</a> 
+        </footer> 
+      </div> 
+    </div> 
+    <!-- end of container --> 
+  </body> 
+</html> 
