Shuffled around styles to make them compatible with login.

--- a/webmocks/alt_design2/splash.html
+++ b/webmocks/alt_design2/splash.html
@@ -42,7 +42,7 @@
           </p> 
         </div> 
         <div class='text_content_wrapper'> 
-          <div class='text_content' id='top_post'> 
+          <div class='text_content'> 
             <h2> 
               News item or welcome note
             </h2> 
@@ -58,7 +58,7 @@
               Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim.
             </p> 
           </div> 
-          <div class='text_content'> 
+          <div class='text_content non_top_post'> 
             <h2> 
               Optional news item 2, demonstrates divider image
             </h2> 
