Form action and method.

--- a/webmocks/alt_design2/login.html
+++ b/webmocks/alt_design2/login.html
@@ -39,7 +39,7 @@
       <div class='content_bulk'> 
         <div class='text_content_wrapper'> 
           <div class='text_content'> 
-            <form id='login_form'>
+            <form id='login_form' action='' method='post'>
               <div id='username_row'>
                 <label for='username'>Username:</label>
                 <input id='username' name='username' value='' type='textbox' />
