change some headers

--- a/webmocks/alt_design2/splash.html
+++ b/webmocks/alt_design2/splash.html
@@ -18,7 +18,7 @@
               <a href='#'>Home</a> 
             </li> 
             <li> 
-              <a href='#'>Login</a> 
+              <a href='/login'>Login</a> 
             </li> 
             <li> 
               <a href='#'>Scoreboard</a> 
