--- a/webmocks/alt_design2/login.html
+++ b/webmocks/alt_design2/login.html
@@ -16,7 +16,7 @@
           </h1> 
           <ul> 
             <li> 
-              <a href='#'>Home</a> 
+              <a href='/'>Home</a> 
             </li> 
             <li class='current_nav_page'> 
               <a href='#'>Login</a> 
