Styled tables in both servers and clans - please see html

--- a/webmocks/alt_design2/clans.html
+++ b/webmocks/alt_design2/clans.html
@@ -37,12 +37,18 @@
       <div class='content_bulk'>
         <div class='text_content_wrapper'>
           <div class='text_content'>
-            <h3>
+            <h2>
               Clans
-            </h3>
-            <table>
+            </h2>
+            <p>
+              Some content here. We can have links to register (if clans is a public page), login, or create a clan directly.<br />
+              Please click on a clan name to see its clan page.
+            </p>
+          </div>
+          <div class='text_content'>
+            <table id="clans">
               <tr>
-                <th class='server_name'>
+                <th>
                   Clan name
                 </th>
                 <th>
@@ -53,7 +59,7 @@
                 </th>
               </tr>
               <tr>
-                <td class='server_name'>
+                <td>
                   <a href='/clan/rawrmage'>
                     rawrmage
                   </a>
@@ -67,8 +73,24 @@
                   1
                 </td>
               </tr>
+              <tr>
+                <td>
+                  <a href='/clan/stennoclan'>
+                    stennoclan
+                  </a>
+                </td>
+                <td>
+                  <a href='/user/rawrmage'>
+                    stenno
+                  </a>
+                </td>
+                <td>
+                  1
+                </td>
+              </tr>
             </table>
           </div>
+          <span class='clear' id='end_of_content_spacer'></span>
         </div>
       </div>
       <div id='footer'>
