--- a/webmocks/alt_design2/register.html
+++ b/webmocks/alt_design2/register.html
@@ -44,7 +44,7 @@
                   <label for='username'>Username:</label> 
                   <input id='username' name='username' type='textbox' value='' /> 
                   <div class='form_msg'> 
-                    Field required
+                    &nbsp;
                   </div> 
                   <span class='clear'></span> 
                 </div> 
@@ -52,18 +52,18 @@
                   <label for='password'>Password:</label> 
                   <input id='password' name='password' type='password' value='' /> 
                   <div class='form_msg'> 
-                    Field required
+                    &nbsp;
                   </div> 
                   <span class='clear'></span> 
                 </div> 
-		<div id='confirm_row'>
-		  <label for='confirm'>Confirm Password:</label>
-		  <input id='confirm' name='confirm' type='password' value='' />
-		  <div class='form_msg'>
-		    Field required
-		  </div>
-		  <span class='clear'></span>
-		</div>
+                <div id='confirm_row'>
+                <label for='confirm'>Confirm Password:</label>
+                <input id='confirm' name='confirm' type='password' value='' />
+                <div class='form_msg'>
+                    &nbsp;
+                </div>
+                <span class='clear'></span>
+                </div>
                 <input id='submit' name='submit' type='submit' value='Register!' /> 
               </fieldset> 
             </form> 
@@ -80,5 +80,15 @@
       </div> 
     </div> 
     <!-- end of container --> 
+    <!-- Javascript and all scripts go here, at the end of the page. --> 
+    <!-- jquery --> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+    <!-- we don't have this yet
+    <script>!window.jQuery && document.write(unescape('%3Cscript src="js/jquery-1.5min.js"%3E%3C/script%3E'))</script> -->
+    <!-- jquery-ui
+    (we don't have this yet either :)
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script> 
+    <script>!window.jQueryui && document.write(unescape('%3Cscript src="js/jquery-ui-1.8.9.custom.min.js"%3E%3C/script%3E'))</script>  --> 
+    <script src="scripts.js"></script>
   </body> 
 </html> 
