/clan/*name mockup. also, major overhaul of css.

--- a/webmocks/alt_design2/clan-name.html
+++ b/webmocks/alt_design2/clan-name.html
@@ -32,14 +32,200 @@
           <span class='clear'></span>
         </nav>
       </div>
-      <div class='content_bulk'>
+      <div class='content_bulk' id="clan_page">
         <div class='text_content_wrapper'>
-          <div class='text_content'>
-            <h1>
-                (Clanname)
-            </h1>
+          <div class='text_content' id="clan_about">
+            <div id="clan_header">
+                <h1>
+                    ItExplodes!
+                </h1>
+                <div id="clan_invite">
+                    <a href="#">
+                        Invite
+                    </a>
+                </div>
+                <div id="clan_join">
+                    <a href="#">
+                        Request join
+                    </a>
+                </div>
+                <div id="clan_placing">
+                    <a href="#">
+                        Placing
+                    </a>
+                </div>
+                <div id="clan_points">
+                    <a href="#">
+                        Points
+                    </a>
+                </div>
+                <span class='clear'></span>
+            </div>
+            <div id="clan_trophies">
+                <div>
+                    <h2>
+                        Trophies go here (title optional)
+                    </h2>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                    <span class="trophyicon">
+                        a trophy icon (img/span)
+                    </span>
+                </div>
+            </div>
           </div>
-          <div class='text_content'>
+          <div class='text_content' id="clan_members">
+            <div>
+                <h2>
+                    Members
+                </h2>
+                <table>
+                    <tr>
+                        <th>
+                            Player
+                        </th>
+                        <th>
+                            Role
+                        </th>
+                        <th>
+                            Last on (EST)
+                        </th>
+                        <th>
+                            Clan points
+                        </th>
+                        <th>
+                            Clan trophies
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="/users/rawrmage">
+                                rawrmage
+                            </a>
+                        </td>
+                        <td>
+                            admin
+                        </td>
+                        <td>
+                            Fri 15 Jul 2011, 14:59
+                        </td>
+                        <td>
+                            2
+                        </td>
+                        <td>
+                            (icons or &amp;nbsp; go here)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="/users/stenno">
+                                stenno
+                            </a>
+                        </td>
+                        <td>
+                            &nbsp;
+                        </td>
+                        <td>
+                            Fri 15 Jul 2011, 18:12
+                        </td>
+                        <td>
+                            5
+                        </td>
+                        <td>
+                            &nbsp;
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="/users/xiella">
+                                xiella
+                            </a>
+                        </td>
+                        <td>
+                            &nbsp;
+                        </td>
+                        <td>
+                            Fri 15 Jul 2011, 08:01
+                        </td>
+                        <td>
+                            0
+                        </td>
+                        <td>
+                            &nbsp;
+                        </td>
+                    </tr>
+                </table>
+             </div>
           </div>
           <span class='clear' id='end_of_content_spacer'></span>
         </div>
