Tweaking /clan/*name. .imagelink class used for trophy <a>s.

--- a/webmocks/alt_design2/clan-name.html
+++ b/webmocks/alt_design2/clan-name.html
@@ -66,81 +66,131 @@
                     <h2>
                         Trophies go here (title optional)
                     </h2>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
-                    <span class="trophyicon">
-                        a trophy icon (img/span)
-                    </span>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
+                    <a href="#" title="Description of trophy" class="imagelink">
+                        <span class="trophyicon">
+                                a trophy icon (img/span)
+                        </span>
+                    </a>
                 </div>
             </div>
           </div>
