Points and placing don't need links.

--- a/webmocks/alt_design2/clan-name.html
+++ b/webmocks/alt_design2/clan-name.html
@@ -50,14 +50,10 @@
                     </a>
                 </div>
                 <div id="clan_placing">
-                    <a href="#">
-                        Placing
-                    </a>
+                    #5th place
                 </div>
                 <div id="clan_points">
-                    <a href="#">
-                        Points
-                    </a>
+                    202093 pts
                 </div>
                 <span class='clear'></span>
             </div>
