Revert "Points and placing don't need links." > Leave it that way, we can always think of something useful to link it > to. As it is, removing links also means we should remove "link" type > styling for usability - users will be confused why they cannot click > on it like they can Join and Invite.
This reverts commit 0de5ba06301993b639bb271ec8ac7b7bd037597d.

--- a/webmocks/alt_design2/clan-name.html
+++ b/webmocks/alt_design2/clan-name.html
@@ -50,10 +50,14 @@
                     </a>
                 </div>
                 <div id="clan_placing">
-                    #5th place
+                    <a href="#">
+                        Placing
+                    </a>
                 </div>
                 <div id="clan_points">
-                    202093 pts
+                    <a href="#">
+                        Points
+                    </a>
                 </div>
                 <span class='clear'></span>
             </div>
