long clan names now have a fallback. use .prettytable for /servers style tables.

--- a/webmocks/alt_design2/clan-name.html
+++ b/webmocks/alt_design2/clan-name.html
@@ -37,7 +37,9 @@
           <div class='text_content' id="clan_about">
             <div id="clan_header">
                 <h1>
-                    ItExplodes!
+                    <span>
+                        Here is a really really long clan name.
+                    </span>
                 </h1>
                 <div id="clan_invite">
                     <a href="#">
