Created trophycabinet classes that work with both text and image at left. Structure: .text_content     .trophycabinet(.text_cabinet)         h3         ul             li                 .trophyleft                 .trophyright                     (multiple content, such as %a) - please use .imagelink on all a's that surround an image - please do not style images in a .trophycabinet inline, ie style=5%;width=5%

--- a/webmocks/alt_design2/scoreboard.html
+++ b/webmocks/alt_design2/scoreboard.html
@@ -112,9 +112,9 @@
                     <ul>
                         <li>
                             <a href='/trophies#sightseeing' title='Sightseeing Tour: finish a game in all variants' class="imagelink">
-                                <img src='../../public/icons/sightseeing.png' alt="sightseeing trophy" />
+                                <img src='../../public/icons/sightseeing.png' alt="sightseeing trophy" class="trophyleft" />
                             </a>
-                            <div class="trophyplaque">
+                            <div class="trophyright">
                                 <span>
                                     <a href='/user/bhaak'>bhaak</a>,
                                 </span>
@@ -130,9 +130,9 @@
                     <ul>
                         <li>
                             <a href='/trophies#sightseeing' title='All conducts' class="imagelink">
-                                <img src='../../public/icons/all-conducts.png' alt="" />
+                                <img src='../../public/icons/all-conducts.png' alt="" class="trophyleft" />
                             </a>
-                            <div class="trophyplaque">
+                            <div class="trophyright">
                                 <span>
                                     <a href='/user/bhaak'>bhaak</a>,
                                 </span>
@@ -143,9 +143,9 @@
                         </li>
                         <li>
                             <a href='/trophies#globetrotter' title='Streak conducts' class="imagelink">
-                                <img src='../../public/icons/streak-conducts.png' alt="Streak conducts trophy" />
+                                <img src='../../public/icons/streak-conducts.png' alt="Streak conducts trophy" class="trophyleft" />
                             </a>
-                            <div class="trophyplaque">
+                            <div class="trophyright">
                                 <span>
                                     <a href='/user/rawrmage'>rawrmage</a>,
                                 </span>
@@ -254,7 +254,7 @@
                                 <span>
                                     <a href='/user/blister'>blister</a>
                                 </span>
-                            </div><!-- end of .trophyplaque -->
+                            </div><!-- end of .trophyright -->
                         </li>
                     </ul>
                 </div><!--end of div.trophycabinet -->
@@ -263,9 +263,9 @@
                     <ul>
                         <li>
                             <a href='/trophies#sightseeing' title='Assault on Fort Knox' class="imagelink">
-                                <img src='../../public/icons/m-croesus.png' alt="" />
+                                <img src='../../public/icons/m-croesus.png' alt="" class="trophyleft" />
                             </a>
-                            <div class="trophyplaque">
+                            <div class="trophyright">
                                 <span>
                                     <a href='/user/rawrmage'>rawrmage</a>,
                                 </span>
@@ -374,20 +374,20 @@
                                 <span>
                                     <a href='/user/blister'>blister</a>
                                 </span>
-                            </div> <!-- end of .trophyplaque -->
+                            </div> <!-- end of .trophyright -->
                         </li>
                         <li>
                             <a href='/trophies#globetrotter' title='No membership card' class="imagelink">
-                                <img src='../../public/icons/m-sam.png' alt="No membership card trophy" />
+                                <img src='../../public/icons/m-sam.png' alt="No membership card trophy" class="trophyleft" />
                             </a>
-                            <div class="trophyplaque">
+                            <div class="trophyright">
                                 <span>
                                     <a href='/user/bhaak'>bhaak</a>,
                                 </span>
                                 <span>
                                     <a href='/user/ishanyx'>ishanyx</a>
                                 </span>
-                            </div> <!-- end of .trophyplaque -->
+                            </div> <!-- end of .trophyright -->
                         </li>
                     </ul>
                 </div><!--end of div.trophycabinet -->
